2009-01-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkBuildable.xs: Declare all private functions as 'static' so
	that they aren't exported.

2009-01-19  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkSelection.xs: Fix the definition of the accessor macros
	for older gtk+.  Patch by Kevin Ryde.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkSelection.xs: Use gtk_selection_data_get_selection when
	available.  Also introduce convenience defines for the other
	GtkSelectionData accessors.  Patch by Emmanuel Rodriguez and
	muppet.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkPrintSettings.t
	* xs/GtkPrintSettings.xs: Wrap new API.  Patch by Emmanuel
	Rodriguez.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkPrintOperation.t
	* xs/GtkPrintOperation.xs: Wrap new API.  Patch by Emmanuel
	Rodriguez.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Use Glib::MakeHelper to create a
	'precompiled-headers' target that precompiles gtk2perl.h.  This
	speeds up the compilation of Gtk2 by 36% on my machine.

2009-01-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* AUTHORS
	* t/GtkStatusIcon.t
	* xs/GtkStatusIcon.xs: Wrap new GtkStatusIcon API.  Patch by
	Chris Sincock.

2009-01-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkIMContext.t
	* xs/GtkIMMulticontext.xs: Wrap
	gtk_im_multicontext_get_context_id.  Patch by Emmanuel Rodriguez.

2009-01-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkImageMenuItem.t
	* xs/GtkImageMenuItem.xs: Wrap new GtkImageMenuItem API.  Patch by
	Emmanuel Rodriguez.

2009-01-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkCellView.t
	* xs/GtkCellView.xs: Allow undef for the model in
	Gtk2::CellView::set_model.

2009-01-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkCellView.t
	* xs/GtkCellView.xs: Wrap gtk_cell_view_get_model.  Patch by
	Emmanuel Rodriguez.

2009-01-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* AUTHORS
	* MANIFEST