@@ -2,7 +2,7 @@
 
 # $Id$
 
-use Gtk2::TestHelper tests => 13;
+use Gtk2::TestHelper tests => 20;
 use strict;
 
 package Mup::CellRendererPopup;
@@ -43,6 +43,23 @@ sub on_get_size { $hits_compat{size}++;  shift->parent_get_size (@_) }
 sub on_render { $hits_compat{render}++;  shift->parent_render (@_) }
 sub on_activate { $hits_compat{activate}++;  shift->parent_activate (@_) }
 sub on_start_editing { $hits_compat{edit}++;  shift->parent_start_editing (@_) }
+
+package My::CellRendererNewEntry;
+use strict;
+use warnings;
+use Glib::Object::Subclass 'Gtk2::CellRendererText';
+my %hits_newentry;
+sub INIT_INSTANCE { $hits_newentry{init}++; }
+sub GET_SIZE { $hits_newentry{size}++;  shift->SUPER::GET_SIZE (@_) }
+sub RENDER { $hits_newentry{render}++;  shift->SUPER::RENDER (@_) }
+sub ACTIVATE { $hits_newentry{activate}++;  shift->SUPER::ACTIVATE (@_) }
+sub START_EDITING { $hits_newentry{edit}++;
+                    my $entry = Gtk2::Entry->new;
+                    $entry->signal_connect (destroy => \&_editable_destroy);
+                    return $entry;
+                  }
+sub _editable_destroy { $hits_newentry{editable_destroy}++ }
+ 
 
 ##########################################################################
 # driver code
@@ -106,6 +123,25 @@ $renderer->signal_connect (edited => sub {
 	}, $model);
 $treeview->append_column ($column_compat);
 
+#
+# new entry cell renderer
+#
+my $renderer_newentry = My::CellRendererNewEntry->new;
+$renderer_newentry->set (mode => 'editable');
+my $column_newentry = Gtk2::TreeViewColumn->new_with_attributes
+    ('new-entry', $renderer_newentry, text => 0,);
+$treeview->append_column ($column_newentry);
+
+#
+# plain core CellRendererText
+#
+my $renderer_text = Gtk2::CellRendererText->new;
+$renderer_text->set (editable => 1);
+my $column_text = Gtk2::TreeViewColumn->new_with_attributes
+    ('core-text', $renderer_text, text => 0,);
+$treeview->append_column ($column_text);
+
+
 ##########################################################################
 
 $vbox->pack_start ($treeview, 1, 1, 0);
@@ -128,7 +164,33 @@ my $event = Gtk2::Gdk::Event->new ("button-press");
 
 $renderer->render ($window->window, $treeview, $rect, $rect, $rect, [qw(sorted prelit)]);
 ok(!$renderer->activate ($event, $treeview, "0", $rect, $rect, qw(selected)));
-isa_ok ($renderer->start_editing ($event, $treeview, "0", $rect, $rect, qw(selected)), "Gtk2::Entry");
+{
+  my $editable = $renderer->start_editing ($event, $treeview, "0", $rect, $rect, qw(selected));
+  isa_ok ($editable, "Gtk2::Entry");
+  my $destroyed = 0;
+  $editable->signal_connect (destroy => sub { $destroyed = 1 });
+  undef $editable;
+  is ($destroyed, 1,
+      'editable from start_editing using SUPER::START_EDITING destroyed when forgotten');
+}
+{
+  my $editable = $renderer_newentry->start_editing ($event, $treeview, "0", $rect, $rect, qw(selected));
+  isa_ok ($editable, "Gtk2::Entry");
+  my $destroyed = 0;
+  $editable->signal_connect (destroy => sub { $destroyed = 1 });
+  undef $editable;
+  is ($destroyed, 1,
+      'editable from start_editing using Gtk2::Entry->new destroyed when forgotten');
+}
+{
+  my $editable = $renderer_text->start_editing ($event, $treeview, "0", $rect, $rect, qw(selected));
+  isa_ok ($editable, "Gtk2::Entry");
+  my $destroyed = 0;
+  $editable->signal_connect (destroy => sub { $destroyed = 1 });
+  undef $editable;
+  is ($destroyed, 1,
+      'editable from start_editing on core GtkCellRendererText destroyed when forgotten');
+}
 
 $renderer->set_fixed_size (23, 42);
 is_deeply([$renderer->get_fixed_size], [23, 42]);
@@ -154,13 +216,24 @@ run_main sub {
 	                       $column, 1);
 	$treeview->set_cursor (Gtk2::TreePath->new_from_string ('0'),
 	                       $column_compat, 1);
+	$treeview->set_cursor (Gtk2::TreePath->new_from_string ('0'),
+	                       $column_newentry, 1);
+
+        # and not editing any more
+	$treeview->set_cursor (Gtk2::TreePath->new_from_string ('0'),
+	                       $column_text, 0);
 };
 
 
 is_deeply ([ sort keys %hits ], [ qw/edit init render size/ ], 'callbacks encountered');
 is_deeply ([ sort keys %hits_compat ], [ qw/edit init render size/ ], 'callbacks encountered');
 
+# one start_editing programmatically, and one from set_cursor of $treeview
+is ($hits_newentry{edit}, 2);
+is ($hits_newentry{editable_destroy}, 2,
+   'the otherwise unreferenced GtkEntry should be destroyed');
+
 __END__
 
-Copyright (C) 2003-2005 by the gtk2-perl team (see the file AUTHORS for the
+Copyright (C) 2003-2005, 2009 by the gtk2-perl team (see the file AUTHORS for the
 full list).  See LICENSE for more information.
